css/minoritywins.css
/* main navigation */
#main-nav{
    background-color: #0d0c0b !important;
    text-align: center
}

#main-nav .navbar-nav {
    width: 100%;
}

#main-nav .nav-link{
    color: #fff;
}


.container{
    max-width: 1000px;
}

/* play and logo */
.play{
    background-image: url("../images/play-bg.jpg");
    min-height: 100vh;
    background-position: bottom;
    background-size: cover;
    position: relative;
    width: 100%;
    -webkit-overflow-scrolling: touch;
    text-align: center;
}

.logo{
    width: 100%;
    text-align: center;
    margin-top: 0;
    padding-top: 0;
}

.logo img{
    max-width: 720px;
    width: 100%;
}

.play-btn{
    margin: 0;
    width: 100%;
    text-align: center;
}

.play-btn-img{
    display: inline-block;
    max-width: 285px;
}

/* side nav */
.navigation{
    position: fixed;
    margin-left: 30px;
    top: 0;
    bottom: 0;
    left: 0;
    width: 250px;
    z-index: 20;
}

.navigation_line{
    height: 100%;
    width: 2px;
    background-color: #ffffff;
    box-shadow: 0px 0px 20px 4px #0ff;
    position: relative;
    float: left;
}

.side-menu{
    height: 100%;    
}
.side-nav{
    margin-left: 10px;
    z-index: 30;
}

.side-nav li{
    text-align: left;
    display: inline-block;
    height: 5rem;
    margin-top: 2.5rem;
    
}


.side-menu a{
    color: #fff;
    font-size: 1.2rem;
    text-transform: uppercase;
}

.side-menu li.active a{
    color: #20edff;
    margin-left: 4rem;
}


.side-nav li.active::before{
    content: url("../images/navigation-arrow.png");
    display: inline-block;
    position: absolute;
    left: -25px;
    margin-top: -60px;
    color: red;
}




/* Parallax Scrolling effect */
 /* .parallax-scroll {
    background-image: url("../images/play-bg.jpg");
  }
  .parallax-scroll,
  .parallax-scroll-2 {
    min-height: 100vh; 
  
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }  */
  
  .fixed-menu{
      z-index: 40;
      position: fixed;
      margin-left: 20px;
      margin-top: 20px;
  }
  .fixed-menu-btn{
      display: inline-block;
  }
  
  #fixedMenu{
      min-width: 170px;
      max-width: 300px;
  
      max-height: 80vh;
      overflow-y: auto;
  }
  
  #fixedMenu li.list-group-item{
      background: #0d0c0b;
      padding: 10px 20px;
      border-top: 1px solid #fff;
  }
  
  #fixedMenu li.list-group-item:nth-child(1){
      border-top: none;
  }
  
  
  #fixedMenu li.list-group-item a{
      color: #fff;
      padding: 0;
  }




  .section-three{
    background-image: url("../images/smoke-bg.png");
    min-height: 100vh;
    background-position: top;
    background-size: cover;
}


.image-grid-row img{
    width: 100%;
}

.features{
    color: #fff;
}

.features-title{
    color: #02ffff;
}



.footer{
    background-image: url("../images/footer-bg.png");
    background-position: top;
    min-height: 80px;
    margin-top: -10px;
}

.social-media-icon{
    margin-right: 0px;
    padding: 0;
}



/* Video section*/
.section-two{
    max-height: 1260px;
    background-position: center;
    background-size: cover;
    position: relative;
    width: 100%;
    max-width: 100%;
}

#bg-video {
  width: 100%;
  height: 100%;
}


.play-btn-img {
    /*position: absolute;
    top: 50%;*/
    text-align: center;
}

.play-btn-2{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    /*z-index: 50;*/
    text-align: center;   
}

/* Video end*/


/* 
#advantages .col-md-6{
    max-width: 40%;
} */

.side-menu .nav-link{
    padding-left: .2rem;
}



@media only screen and (max-width: 768px) {
    .play-btn-img {
        max-width: 285px;
    }
    .play-btn-2 > img {
        max-width: 200px;
    }
  }
  
  

@media only screen and (max-width: 920px) {
    .intro{
        max-width: 520px;
    }

    .play-btn-img{
        max-width: 200px;
    }
    
}


@media only screen and (max-width: 480px) {
    .play-btn-img {
        max-width: 120px;
    }
    .play-btn-2 > img {
        max-width: 150px;
    }

    .intro{
        max-width: 250px;
    }
  }

@media only screen and (max-width: 850px) {
    
    .play{
        background-image: url("../images/play-bg-md.jpg");
        min-height: 430px;
    }

    
}


@media only screen and (max-width: 850px) and (min-width: 767px) {

    #advantages{
        padding-left: 2rem;
    }
    
}

@media only screen and (max-width: 450px) {
    
    .play{
        background-image: url("../images/play-bg-sm.jpg");
        min-height: 230px;
    }

}


@media only screen and (max-height: 450px) {
    
    .side-nav li{
    /*    margin-bottom: 40px;*/
        height: 3rem;
        margin-top: 2rem;
        color: red;
    }
    
   
}

  

@media only screen and (max-width: 1180px) {
    .container{
        max-width: 710px;
    }   
    
    .side-menu a{
        font-size: .8rem;
    }

    .side-menu li.active a{
        margin-left: 2rem;
    }

    .side-nav li.active::before{
        content: url("../images/navigation-arrow-small.png");
        display: inline-block;
        position: absolute;
        left: -18px;
        margin-top: -44px;
        color: red;
    }
    
}


@media only screen and (max-height: 360px) {
    .logo img{
        width: 320px;
    }
    
}

.span-line{
    display: none;
}

@media only screen and (max-width: 1180px) and (min-width: 992px){
    .span-line{
        display: block;
    }
    
} 


@media only screen and (max-width: 840px){
    
    .navigation{
        left: -20px;
    }
    

    .side-menu li.active a{
        margin-left: 1rem;
    }

    #advantages{
        padding-left: 3rem;
    }
    
}

@media only screen and (max-width: 797px) and (min-width: 768px){
    
    #advantages{
        padding-left: 4rem;
    }
    
}

@media only screen and (max-width: 767px){
    
    #advantages{
        padding-left: 0;
    }
    
}

